# Fulminare

./: .gitignore  CLAUDE.md  FIGMA_PROMPT.md  PLAN.md  README.md  figma.txt  prompt.md  pyproject.toml
.claude/: launch.json  settings.local.json
.claude/worktrees/loving-lovelace-1aa7da/: .gitignore  CLAUDE.md  README.md
analytics/: alerts.py  chargeback.py  forecast.py  imbalance.py  metrics.py  pipeline.py  transfer.py
data/: constants.py  dc_labels.py  ingest.py  ingest_real.py  schemas.py
data/raw/: POP_AssemblyOrders.XLSX  POP_DataDictionary.xlsx  POP_ImportShipmentStatus.xlsx  POP_InternalTransferHistory.XLSX  POP_InternalTransferRequests.xlsx  POP_PurchaseOrderHistory.XLSX  POP_VendorMaster.xlsx
data/seed/: chargebacks.csv  freight.csv  inventory.csv  open_po.csv  sales.csv  skus.csv  suppliers.csv  transfers.csv
demo/: rehearsal.md  scenario.md
next-app/: pnpm-lock.yaml
shared/: metrics.md  roadmap.md
tests/: test_alerts.py  test_chargeback.py  test_imbalance.py  test_transfer.py
web/: __init__.py
web/api/: chat_prompts.py  chat_tools.py  chat_validator.py  config.py  main.py
web/api/routes/: action_items.py  chargebacks.py  chat.py  inventory.py  recommendations.py
web/frontend/: package.json  pnpm-lock.yaml
web/frontend/app/: layout.tsx  page.tsx
web/frontend/components/: ActionComparisonCard.tsx  ActionQueue.tsx  ChargebackHeatmap.tsx  Chatbot.tsx  FilterBar.tsx  ImbalanceTable.tsx  InventoryMatrix.tsx  KpiCard.tsx  MetricTooltip.tsx  OnboardingTour.tsx  PoTimeline.tsx  RecommendationPanel.tsx  SavingsBanner.tsx  Sidebar.tsx  (+3 more)
(+31 files in other folders)
